// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box> should render with a class name 1`] = `
<Box
  className="mt-5"
  max={500}
>
  <div
    className="mt-5"
    style={
      Object {
        "backgroundColor": "#f8f9fa",
        "border": "solid 1px #ccc",
        "borderRadius": "8px",
        "margin": "0 auto",
        "maxWidth": 500,
        "padding": "20px 20px",
        "width": "100%",
      }
    }
  />
</Box>
`;

exports[`<Box> should render with a max width of 500px 1`] = `
<Box
  max={500}
>
  <div
    style={
      Object {
        "backgroundColor": "#f8f9fa",
        "border": "solid 1px #ccc",
        "borderRadius": "8px",
        "margin": "0 auto",
        "maxWidth": 500,
        "padding": "20px 20px",
        "width": "100%",
      }
    }
  />
</Box>
`;
